# CPPBind-examples

./: .gitignore  .gitmodules
config/: example_dataspace_c.cfg  example_dataspace_lua.cfg  example_dataspace_rust.cfg  example_kobject_c.cfg  example_kobject_lua.cfg  example_kobject_rust.cfg  modules.list
server/src/: Makefile
server/src/c/: Makefile  example_dataspace_c.c  example_kobject_client_c.c
server/src/c/bind/: cap_alloc_c.cc  capability_c.cc  capability_c.h  consts_c.cc  counting_cap_alloc_c.cc  counting_cap_alloc_c.h  dataspace_c.cc  dataspace_c.h  env_c.cc  env_c.h  example_kobject_shared_c.cc  example_kobject_shared_c.h  (+7 more)
server/src/cc/: Makefile  example_kobject_server.cc
server/src/lua/: Makefile  example_dataspace_lua.lua  example_kobject_client_lua.lua
server/src/rust/: Cargo.toml  Makefile  build  build.rs  config.toml
server/src/rust/src/: example_dataspace_rust.rs  example_kobject_client_rust.rs
server/src/rust/src/bind/: cap_alloc_c.cc  cap_alloc_c.h  cap_alloc_rust.rs  capability_c.cc  capability_c.h  capability_rust.rs  consts_c.cc  consts_rust.rs  counting_cap_alloc_c.cc  counting_cap_alloc_c.h  counting_cap_alloc_rust.rs  cppbind  dataspace_c.cc  dataspace_c.h  dataspace_rust.rs  env_c.cc  env_c.h  env_rust.rs  example_kobject_shared_c.cc  example_kobject_shared_rust.rs  ipc_types_c.cc  ipc_types_c.h  ipc_types_rust.rs  mem_alloc_c.cc  mem_alloc_c.h  mem_alloc_rust.rs  rm_c.cc  rm_c.h  rm_rust.rs
shared/: example_kobject_shared.h
wrap/: wrap.py
wrap/template_instantiations/: capability.tcc  counting_cap_alloc.tcc  env.tcc
(+11 files in other folders)
